samples/_failures_safe/1761607963_16f20f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_aaab91c4.c: In function ‘main’:
./samples/SAFE/__tmp_aaab91c4.c:152:9: error: expected expression at end of input
  152 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_aaab91c4.c:152:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_aaab91c4.c:152:9: error: expected declaration or statement at end of input
